# docs/swagger.json
@@ -15,6 +15,50 @@
         "version": "1.0"
     },
     "paths": {
+        "/v1/refresh": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "refresh access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "refresh access token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID to encode into token",
+                        "name": "accesstoken",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User ID to encode into token",
+                        "name": "refreshtoken",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/token/new": {
             "get": {
                 "description": "Create a new access token.",
@@ -54,7 +98,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "refresh access token",
+                "description": "get UID",
                 "consumes": [
                     "application/json"
                 ],
@@ -62,9 +106,18 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Token"
+                    "UID"
                 ],
-                "summary": "refresh access token",
+                "summary": "get UID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID to encode into token",
+                        "name": "refreshtoken",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "ok",
