# pkg/routes/public_routes.go
@@ -10,4 +10,5 @@ func PublicRoutes(a *fiber.App) {
 	route := a.Group("/v1")
 
 	route.Get("/token/new", controllers.GetNewAccessToken)
+	route.Get("/refresh", controllers.RefreshToken)
 }
